# AIrPPG

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: task1_video_preprocessing.ipynb
outputs/task1_preprocessing/: task1_dataset_manifest.json
outputs/task1_preprocessing/DATASET_1/10-gt/: vid_metadata.json
outputs/task1_preprocessing/DATASET_1/11-gt/: vid_metadata.json
outputs/task1_preprocessing/DATASET_1/12-gt/: vid-040_metadata.json
outputs/task1_preprocessing/DATASET_1/5-gt/: vid-049_metadata.json
outputs/task1_preprocessing/DATASET_1/6-gt/: vid-045_metadata.json
outputs/task1_preprocessing/DATASET_1/7-gt/: vid-042_metadata.json
outputs/task1_preprocessing/DATASET_1/8-gt/: vid_metadata.json
outputs/task1_preprocessing/DATASET_2/subject1/: vid_metadata.json
outputs/task1_preprocessing/DATASET_2/subject10/: vid_metadata.json
outputs/task1_preprocessing/DATASET_2/subject11/: vid_metadata.json
outputs/task1_preprocessing/DATASET_2/subject12/: vid_metadata.json
outputs/task1_preprocessing/DATASET_2/subject13/: vid_metadata.json
outputs/task1_preprocessing/DATASET_2/subject14/: vid_metadata.json
outputs/task1_preprocessing/DATASET_2/subject15/: vid_metadata.json
outputs/task1_preprocessing/DATASET_2/subject16/: vid_metadata.json
outputs/task1_preprocessing/DATASET_2/subject17/: vid_metadata.json
outputs/task1_preprocessing/DATASET_2/subject18/: vid_metadata.json
outputs/task1_preprocessing/DATASET_2/subject20/: vid_metadata.json
outputs/task1_preprocessing/DATASET_2/subject22/: vid_metadata.json
(+30 files in other folders)
